--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "devDependencies": {
         "@popperjs/core": "^2.0",
         "axios": "^1.6.4",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.6.2",
+        "jquery": "^3.6",
         "laravel-vite-plugin": "^1.0.0",
-        "sass": "^1.15.2",
-        "vite": "^5.0.0",
+        "lodash": "^4.0",
         "postcss": "^8.4.14",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "jquery": "^3.6",
-        "lodash": "^4.0"
-    },
-    "dependencies": {}
+        "vite": "^5.0.0"
+    }
 }
